--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -88,14 +88,15 @@
     <!-- Navbar -->
     <div class="navbar">
         <img src="logo.png" alt="Logo" onclick="location.href='/'">
-        <select>
-            <option>Filtrar por:</option>
-            <option onclick="location.href='/?sort=desc'">Menor precio</option>
-            <option onclick="location.href='/?sort=asc'">Mayor precio</option>
+        <select id="filterSelect">
+            <option value="">Filtrar por:</option>
+            <option value="asc">Menor precio</option>
+            <option value="desc">Mayor precio</option>
+            <option value="available">Disponible</option>
         </select>
         <input type="text" placeholder="Buscar productos...">
-        <button onclick="location.href='/carritos'">Ver Carritos</button>
-        <button onclick="location.href='/perfil'">Visitar Perfil</button>
+        <button id="cart-toggle" onclick="toggleCart()">Ver Carritos</button>
+        <button onclick="location.href='/profile'">Visitar Perfil</button>
     </div>
 
     <!-- Content -->
