--- a/src/views/resetPassword.handlebars
+++ b/src/views/resetPassword.handlebars
@@ -83,22 +83,22 @@
 </head>
 <body>
 
-    <!-- Navbar -->
     <div class="navbar">
         <img src="logo.png" alt="Logo" onclick="location.href='/'">
-        <select>
-            <option>Filtrar por:</option>
-            <option onclick="location.href='/?sort=desc'">Menor precio</option>
-            <option onclick="location.href='/?sort=asc'">Mayor precio</option>
+        <select id="filterSelect">
+            <option value="">Filtrar por:</option>
+            <option value="asc">Menor precio</option>
+            <option value="desc">Mayor precio</option>
+            <option value="available">Disponible</option>
         </select>
         <input type="text" placeholder="Buscar productos...">
-        <button onclick="location.href='/carritos'">Ver Carritos</button>
-        <button onclick="location.href='/perfil'">Visitar Perfil</button>
+        <button onclick="location.href='/api/carts'">Visitar Carritos</button>
+        <button onclick="location.href='/profile'">Visitar Perfil</button>
     </div>
 
     <!-- Content -->
     <h1>Restablecer Contraseña</h1>
-    <form action="/reset-password" method="POST"> 
+    <form action="/api/sessions/reset-password" method="POST"> 
         <label for="email">Correo Electrónico:</label> 
         <input type="email" id="email" name="email" required> 
 
@@ -107,6 +107,21 @@
 
         <button type="submit">Restablecer Contraseña</button> 
     </form>
+    <script>
+        
+        document.getElementById('filterSelect').addEventListener('change', function() {
+        const selectedValue = this.value;
 
+        if (selectedValue === 'desc') {
+            location.href = '/?sort=desc';
+        } else if (selectedValue === 'asc') {
+            location.href = '/?sort=asc';
+        } else if (selectedValue === 'available') {
+            const availableProducts = prods.filter(prod => prod.stock > 0);
+            console.log('Productos disponibles:', availableProducts);
+        }
+        });
+
+    </script>
 </body>
 </html>
